macros/tests/ui/simple_missing_name.rs
use step_io_macros::step_entity;

struct Handler;

#[step_entity(pass = Pass1)]
impl Handler {}

fn main() {}
